# claude-course

./: .gitignore  001_requests.ipynb  002_system_prompt.ipynb  pyproject.toml
01 Claude API/: 001_requests.ipynb  003_temperature.ipynb  004_streaming.ipynb  005_controlling_output.ipynb
02 Prompt Evaluation/: 001_prompt_evals.ipynb
03 Prompt Engineering/: 001_prompting.ipynb  002_prompting_task_2.ipynb
